// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReportMap /> mounts without crashing 1`] = `
<ReportMap>
  <withScriptjs(withGoogleMap(Component))
    containerElement={
      <div
        className="ReportMap"
      />
    }
    googleMapURL="https://maps.googleapis.com/maps/api/js?key=AIzaSyDttFtNppkWvWarNnGNvJsCEynQBVfO2K4&v=3.exp&libraries=geometry,drawing,places"
    loadingElement={
      <div
        style={
          Object {
            "height": "100%",
          }
        }
      />
    }
    mapDefaults={
      Object {
        "defaultCenter": Object {
          "lat": 42.3603416,
          "lng": -83.0801975,
        },
        "defaultZoom": 11,
      }
    }
    mapElement={
      <div
        style={
          Object {
            "height": "100%",
          }
        }
      />
    }
    onMapMounted={[Function]}
  >
    <div
      style={
        Object {
          "height": "100%",
        }
      }
    />
  </withScriptjs(withGoogleMap(Component))>
</ReportMap>
`;

exports[`<ReportMap /> renders without crashing 1`] = `
<withScriptjs(withGoogleMap(Component))
  containerElement={
    <div
      className="ReportMap"
    />
  }
  googleMapURL="https://maps.googleapis.com/maps/api/js?key=AIzaSyDttFtNppkWvWarNnGNvJsCEynQBVfO2K4&v=3.exp&libraries=geometry,drawing,places"
  loadingElement={
    <div
      style={
        Object {
          "height": "100%",
        }
      }
    />
  }
  mapDefaults={
    Object {
      "defaultCenter": Object {
        "lat": 42.3603416,
        "lng": -83.0801975,
      },
      "defaultZoom": 11,
    }
  }
  mapElement={
    <div
      style={
        Object {
          "height": "100%",
        }
      }
    />
  }
  onMapMounted={[Function]}
/>
`;

exports[`<ReportMap /> setCurrentLocation sets state to the position object coords 1`] = `
<withScriptjs(withGoogleMap(Component))
  containerElement={
    <div
      className="ReportMap"
    />
  }
  googleMapURL="https://maps.googleapis.com/maps/api/js?key=AIzaSyDttFtNppkWvWarNnGNvJsCEynQBVfO2K4&v=3.exp&libraries=geometry,drawing,places"
  loadingElement={
    <div
      style={
        Object {
          "height": "100%",
        }
      }
    />
  }
  mapDefaults={
    Object {
      "defaultCenter": Object {
        "lat": 42.3603416,
        "lng": -83.0801975,
      },
      "defaultZoom": 11,
    }
  }
  mapElement={
    <div
      style={
        Object {
          "height": "100%",
        }
      }
    />
  }
  onMapMounted={[Function]}
/>
`;
